objects/Case.object
<CustomObject>
    <fields>
        <fullName>Confirmation_of_DBA_Name_Change_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation of DBA Name Change Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Details__c</fullName>
        <label>Custom Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Migration_ID__c</fullName>
        <label>Data Migration ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Termination_Notes__c</fullName>
        <label>Detailed Termination Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Total__c</fullName>
        <label>Discount Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drug_or_Pre_Employment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drug &amp;/or Pre-Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPLI_Add_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPLI Add/Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Name_Signatory_Change_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entity/Name/Signatory Change(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_KPI_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from KPI Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Payroll_Date__c</fullName>
        <label>Final Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_WC_Deductible__c</fullName>
        <label>Final WC Deductible</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_WC_Policy_Year__c</fullName>
        <label>Final WC Policy Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HC_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HC Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hawaii_Human_Resources_Inc_HiHR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hawaii Human Resources, Inc (HiHR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Care_Add_Drop_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Care Add/Drop/Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Care_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Care Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_House__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-House</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increase_Total__c</fullName>
        <label>Increase Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Fee_Dis_P__c</fullName>
        <label>Labor Fee Dis %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labor_Fee_Dis__c</fullName>
        <label>Labor Fee Dis $</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Fee_Inc_P__c</fullName>
        <label>Labor Fee Inc %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Labor_Fee_Inc__c</fullName>
        <label>Labor Fee Inc $</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Fee_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labor Fee Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Benefits_Coverage__c</fullName>
        <label>Last Day of Benefits Coverage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Binding_Coverage__c</fullName>
        <label>Last Day of Binding Coverage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Makai_HR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Makai HR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Misc_Credit_Amount__c</fullName>
        <label>Misc. Credit Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Calendar_Year_Total_Inc_Decrease__c</fullName>
        <formula>( 
BLANKVALUE(Calendar_Year_Discount_Total__c,0) 
- 
BLANKVALUE(Calendar_Year_Increase_Total__c,0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Calendar Year Total Inc/Decrease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Admin_Increase_Decrease__c</fullName>
        <formula>( 
BLANKVALUE(Admin_Discount__c,0) 
- 
BLANKVALUE(Admin_Increase__c,0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Admin Increase/Decrease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Increase_Decrease__c</fullName>
        <formula>( 
BLANKVALUE(Discount_Total__c,0) 
- 
BLANKVALUE(Increase_Total__c,0) 
)</formula>
        <label>Net Total Increase/Decrease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Labor_Fee_Increase_Decrease__c</fullName>
        <formula>( 
BLANKVALUE(Labor_Fee_Dis__c,0) 
- 
BLANKVALUE(Labor_Fee_Inc__c,0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Labor Fee Increase/Decrease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_WC_Increase_Decrease__c</fullName>
        <formula>( 
BLANKVALUE(WC_Discount__c,0) 
- 
BLANKVALUE(WC_Increase__c,0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total WC Increase/Decrease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_on_Final_Revisions_To_Account__c</fullName>
        <label>Notes on Final Revisions To Account</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Competitor (Please Specify Below)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_PSH_Rate_Increase_Repercussions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post PSH Rate Increase Repercussions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <description>See following link for details on why this field was added: 
https://success.salesforce.com/answers?id=9063000000048RbAAI</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preliminary_Pricing__c</fullName>
        <description>This is the recommended pricing/pricing range from the Pricing Team before it finalized by either the AM/AAM or Director of AM.</description>
        <label>Preliminary Pricing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Needed__c</fullName>
        <label>Pricing Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Urgency__c</fullName>
        <inlineHelpText>High – Pricing (3 bus. days) &amp; Collateral (4 bus. Days) 
Medium – Pricing (5 bus. Days) &amp; Collateral (5 bus. Days) 
Low – Pricing (7 bus. Days) &amp; Collateral (7 bus. Days)</inlineHelpText>
        <label>Pricing Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-High</fullName>
                </value>
                <value>
                    <fullName>2-Med</fullName>
                </value>
                <value>
                    <fullName>3-Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_in_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing in General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regarding_EE_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regarding EE 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issues Reference 1</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regarding_EE_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regarding EE 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issues Reference 2</relationshipLabel>
        <relationshipName>Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regarding_EE_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regarding EE 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issues Reference 3</relationshipLabel>
        <relationshipName>Issues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Summary/Pricing Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Deficiency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Deficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Type_After_Revisions__c</fullName>
        <label>Service Type After Revisions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HRO</fullName>
                </value>
                <value>
                    <fullName>PEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Years__c</fullName>
        <formula>IF( TEXT(Account.Status_Description__c)="Active", 
(TODAY()- Account_Original_Start_Date__c)/365, 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category_1__c</fullName>
        <label>Sub-Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Pay Inquiry</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Timesheet</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Web Payroll</fullName>
                </value>
                <value>
                    <fullName>AFLAC</fullName>
                </value>
                <value>
                    <fullName>Flex Spending</fullName>
                </value>
                <value>
                    <fullName>401(k)</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>TDI</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>Report Request</fullName>
                </value>
                <value>
                    <fullName>Client Update</fullName>
                </value>
                <value>
                    <fullName>Client Terms</fullName>
                </value>
                <value>
                    <fullName>Client Recontracting</fullName>
                </value>
                <value>
                    <fullName>AM Call Down</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>HMSA</fullName>
                </value>
                <value>
                    <fullName>HDS</fullName>
                </value>
                <value>
                    <fullName>WHI</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>Nat'l Medical</fullName>
                </value>
                <value>
                    <fullName>New Hire</fullName>
                </value>
                <value>
                    <fullName>EE Changes</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Physical File Request</fullName>
                </value>
                <value>
                    <fullName>WC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_2__c</fullName>
        <label>Sub-Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Category_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Entry Error</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Lost Checks</fullName>
                </value>
                <value>
                    <fullName>Deductions Issue</fullName>
                </value>
                <value>
                    <fullName>Pay Issue</fullName>
                </value>
                <value>
                    <fullName>Supp. Payroll</fullName>
                </value>
                <value>
                    <fullName>Garnishment</fullName>
                </value>
                <value>
                    <fullName>Certified Payroll</fullName>
                </value>
                <value>
                    <fullName>Census</fullName>
                </value>
                <value>
                    <fullName>Pay Register</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc Reports</fullName>
                </value>
                <value>
                    <fullName>Email Submission</fullName>
                </value>
                <value>
                    <fullName>Request Excel Version</fullName>
                </value>
                <value>
                    <fullName>Late Timesheet</fullName>
                </value>
                <value>
                    <fullName>New Pay Codes</fullName>
                </value>
                <value>
                    <fullName>New Job Codes</fullName>
                </value>
                <value>
                    <fullName>ACH Change</fullName>
                </value>
                <value>
                    <fullName>New Location</fullName>
                </value>
                <value>
                    <fullName>Change Pay Schedule</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Late Submission</fullName>
                </value>
                <value>
                    <fullName>Timeout/Repost to Web</fullName>
                </value>
                <value>
                    <fullName>Column Adjustment</fullName>
                </value>
                <value>
                    <fullName>Time and Attendance</fullName>
                </value>
                <value>
                    <fullName>New Hire not Appearing</fullName>
                </value>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_for_Out_of_State_PEO_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support for Out of State PEO Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TDI_Add_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TDI Add/Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TTM_Lost_Admin_Fee__c</fullName>
        <label>TTM Lost Admin Fee</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination_Competitor__c</fullName>
        <label>Termination Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant/CPA</fullName>
                </value>
                <value>
                    <fullName>ACW/Vensure Inc.</fullName>
                </value>
                <value>
                    <fullName>AdminiStaff</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Colliers International</fullName>
                </value>
                <value>
                    <fullName>Makai HR</fullName>
                </value>
                <value>
                    <fullName>Employer Options</fullName>
                </value>
                <value>
                    <fullName>Gusto Payroll</fullName>
                </value>
                <value>
                    <fullName>Hawaii Human Resources, Inc (HiHR)</fullName>
                </value>
                <value>
                    <fullName>Heartland Payroll Service</fullName>
                </value>
                <value>
                    <fullName>HR Benefix</fullName>
                </value>
                <value>
                    <fullName>Human Resources Administration of Hawaii</fullName>
                </value>
                <value>
                    <fullName>ICON Employer Services of Hawaii</fullName>
                </value>
                <value>
                    <fullName>Kila Kila</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>One Source</fullName>
                </value>
                <value>
                    <fullName>Pacific Advantage Unlimited (PAU)</fullName>
                </value>
                <value>
                    <fullName>Pacific Data Services</fullName>
                </value>
                <value>
                    <fullName>Paychex</fullName>
                </value>
                <value>
                    <fullName>People of Integrity (POI)</fullName>
                </value>
                <value>
                    <fullName>PUC</fullName>
                </value>
                <value>
                    <fullName>Staffing Solutions</fullName>
                </value>
                <value>
                    <fullName>Talent HR</fullName>
                </value>
                <value>
                    <fullName>TNT Payroll</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Description__c</fullName>
        <label>Termination Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Fees_Applied__c</fullName>
        <label>Termination Fees Applied</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination_Initiated_By__c</fullName>
        <label>Termination Initiated By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ProService</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Entity Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Initiation_Date__c</fullName>
        <label>Termination Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Status__c</fullName>
        <label>Termination Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed (Filed)</fullName>
                </value>
                <value>
                    <fullName>Anticipated Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Submitted_By__c</fullName>
        <label>Termination Submitted By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Type__c</fullName>
        <label>Termination Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Breach of Contract</fullName>
                </value>
                <value>
                    <fullName>Business Closure</fullName>
                </value>
                <value>
                    <fullName>Cost Issues</fullName>
                </value>
                <value>
                    <fullName>Entity Change or Other Internal Issue</fullName>
                </value>
                <value>
                    <fullName>Handling Own HR</fullName>
                </value>
                <value>
                    <fullName>Health Care Issues</fullName>
                </value>
                <value>
                    <fullName>HR Risk</fullName>
                </value>
                <value>
                    <fullName>Insurance Services Risk</fullName>
                </value>
                <value>
                    <fullName>Receivables/NSFs</fullName>
                </value>
                <value>
                    <fullName>Service Issues</fullName>
                </value>
                <value>
                    <fullName>Slowdown</fullName>
                </value>
                <value>
                    <fullName>Sold Business</fullName>
                </value>
                <value>
                    <fullName>Switch to Competitor</fullName>
                </value>
                <value>
                    <fullName>Z Pay/No EEs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time &amp; Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_In_Collateral_Prep_Status__c</fullName>
        <description>IF(ISBLANK( Collateral_Prep_Requested_Date_Start__c),NULL,

TEXT( 
FLOOR(Collateral_Prep_Requested_Date_End__c - Collateral_Prep_Requested_Date_Start__c) 
) &amp; " Days " &amp; 
TEXT( 
FLOOR(MOD((Collateral_Prep_Requested_Date_End__c - Collateral_Prep_Requested_Date_Start__c)*24,24)) 
) &amp;" Hours " &amp; 
TEXT( 
ROUND(MOD((Collateral_Prep_Requested_Date_End__c - Collateral_Prep_Requested_Date_Start__c)*1440,60),0) 
) &amp;" Minutes "
)</description>
        <formula>BLANKVALUE(Collateral_Prep_Requested_Date_End__c,NOW()) - Collateral_Prep_Requested_Date_Start__c</formula>
        <label>Time In Collateral Prep Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Trending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total Cost Trending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Days_with_ProService__c</fullName>
        <formula>Last_Day_of_Binding_Coverage__c -  Account_Original_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days with ProService</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Years_with_ProService__c</fullName>
        <formula>Total_Days_with_ProService__c /365</formula>
        <label>Total Years with ProService</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ursula_Opportunity_Salesforce_ID__c</fullName>
        <label>Ursula Opportunity Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ursula_Termination_Salesforce_ID__c</fullName>
        <label>Ursula Termination Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Add_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WC Add/Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WC_Deductible_Discount__c</fullName>
        <label>WC Deductible Discount %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WC_Deductible_Increase__c</fullName>
        <label>WC Deductible Increase %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WC_Discount_P__c</fullName>
        <label>WC Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WC_Discount__c</fullName>
        <label>WC Discount $</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WC_Increase_P__c</fullName>
        <label>WC Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WC_Increase__c</fullName>
        <label>WC Increase $</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WC_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WC Special</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Withhold_from_W_2_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Withhold from W-2 Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <formula>CASE(Status,
"Won - No Action Taken",1,
"Won - Adjustment w/o Contract",1,
"Won - Adjustment w/Contract",1,
"Won - Entity/Name Change",1,
"Won - Letting Client Go",1,
0) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workers_Comp_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workers' Comp Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X401K__c</fullName>
        <defaultValue>false</defaultValue>
        <label>401K</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed,Won - No Action Taken,Won - Adjustment w/o Contract</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Won - Adjustment w/Contract,Won - Entity/Name Change,Won - Letting Client Go</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Lost - Client Terming,Client Termination</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Won - No Action Taken,Won - Adjustment w/o Contract</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Won - Adjustment w/Contract,Won - Entity/Name Change,Won - Letting Client Go</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Lost - Client Terming,Client Termination</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
</CustomObject>